addons/yxsd_yaml/sit-ingress/test-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
  namespace: default
spec:
  selector:
    app: test-nginx
  ports:
    - protocol: TCP
      port: 80
      name: nginxport
  type: ClusterIP
